[gd_scene load_steps=6 format=2]

[ext_resource path="res://redesign/scripts/GameController.gd" type="Script" id=1]
[ext_resource path="res://redesign/scenes/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://redesign/scenes/MainMenuBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/KOMIKAX_36.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.419608, 0, 0, 1 )

[node name="GameController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="LevelCanvas" type="CanvasLayer" parent="."]
pause_mode = 1
follow_viewport_enable = true

[node name="Level" parent="LevelCanvas" instance=ExtResource( 2 )]

[node name="MenuCanvas" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="MainMenuPopup" type="Popup" parent="MenuCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuBox" parent="MenuCanvas/MainMenuPopup" instance=ExtResource( 3 )]

[node name="LevelCompletePopup" type="Popup" parent="MenuCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelCompleteLabel" type="Label" parent="MenuCanvas/LevelCompletePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -80.0
margin_right = 201.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "Level Complete
Press R to Retry
Press Space to Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="levelCompleted" from="LevelCanvas/Level" to="." method="_on_Level_levelCompleted"]
[connection signal="quitPressed" from="MenuCanvas/MainMenuPopup/MainMenuBox" to="." method="_on_MainMenuBox_quitPressed"]
[connection signal="restartPressed" from="MenuCanvas/MainMenuPopup/MainMenuBox" to="." method="_on_MainMenuBox_restartPressed"]
[connection signal="resumePressed" from="MenuCanvas/MainMenuPopup/MainMenuBox" to="." method="_on_MainMenuBox_resumePressed"]
